[gd_scene load_steps=9 format=3 uid="uid://e8mr5ys7gou"]

[ext_resource type="Script" path="res://milktea_port_3.gd" id="1_iy0k4"]
[ext_resource type="Texture2D" uid="uid://d2s3mxcjusdkh" path="res://Assets/Opdelt porte/milktea_port_h.png" id="2_70iqf"]
[ext_resource type="Texture2D" uid="uid://br6x1k4rsoif4" path="res://Assets/Opdelt porte/milktea_port_v.png" id="3_kmj0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbfuo"]
size = Vector2(66, 20)

[sub_resource type="Animation" id="Animation_wu3m1"]
resource_name = "milktea_port_open_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_3bpkx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_gwepo"]
resource_name = "milktea_port_close_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hcfbl"]
_data = {
"RESET": SubResource("Animation_3bpkx"),
"milktea_port_close_3": SubResource("Animation_gwepo"),
"milktea_port_open_3": SubResource("Animation_wu3m1")
}

[node name="milktea_port_3" type="StaticBody2D"]
script = ExtResource("1_iy0k4")

[node name="milktea_h_3" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_70iqf")

[node name="milktea_v_3" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_kmj0c")

[node name="milktea_port_collision_3" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_vbfuo")

[node name="ap_milktea_3" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hcfbl")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
